--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     content="Premium hair, makeup, nail & beauty services at Sugarcoat Salon in Hennur, Bangalore. From hair treatments to luxe facials, relax, refresh, and reinvent your style."
     property="twitter:description" />
   <meta property="og:type" content="website" />
+  <!-- Social Share Image -->
+  <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/placeholder-og.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
+  <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/placeholder-og.webp" />
   <!-- After you add your site in Search Console, Google gives a code-->
   <meta name="google-site-verification" content="LM9kGB_uIxpK8N3KkYqhk5jk9Giu9pFpjnC2SSC6HbA" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta name="format-dection" content="telephone=no, email=no, address=no">
+  <meta name="format-detection" content="telephone=no, email=no, address=no">
   <meta name="robots" content="index, follow">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
   <style>
@@ -42,7 +48,7 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script
-    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Baskervville:regular,italic", "DM Sans:regular,italic,500,500italic,700,700italic", "Bodoni Moda:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Yellowtail:regular", "Fjalla One:regular", "Source Sans 3:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Lexend:100,200,300,regular,500,600,700,800,900", "Zilla Slab:300,300italic,regular,italic,500,500italic,600,600italic,700,700italic", "Prata:regular", "Manrope:200,300,regular,500,600,700,800", "Playfair Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"] } });</script>
+    type="text/javascript">WebFont.load({ google: { families: ["Yellowtail:regular", "Fjalla One:regular", "Source Sans 3:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
   <link href="/assets/favicon.webp" rel="shortcut icon" type="image/png" />
