--- a/services.html
+++ b/services.html
@@ -18,6 +18,12 @@
         property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
+    <!-- Social Share Image -->
+    <meta property="og:image" content="https://www.sugarcoatsalon.in/assets/placeholder-og.webp" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Sugarcoat Salon in Hennur, Bangalore" />
+    <meta name="twitter:image" content="https://www.sugarcoatsalon.in/assets/placeholder-og.webp" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta name="robots" content="index, follow">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -39,7 +45,7 @@
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
-        type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Baskervville:regular,italic", "DM Sans:regular,italic,500,500italic,700,700italic", "Bodoni Moda:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Yellowtail:regular", "Fjalla One:regular", "Source Sans 3:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic", "Lexend:100,200,300,regular,500,600,700,800,900", "Zilla Slab:300,300italic,regular,italic,500,500italic,600,600italic,700,700italic", "Prata:regular", "Manrope:200,300,regular,500,600,700,800", "Playfair Display:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic", "Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"] } });</script>
+        type="text/javascript">WebFont.load({ google: { families: ["Yellowtail:regular", "Fjalla One:regular", "Source Sans 3:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"] } });</script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="/assets/favicon.webp" rel="shortcut icon" type="image/png" />
@@ -47,72 +53,37 @@
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "BeautySalon",
-  "@id": "https://sugarcoatsalon.in/#beautysalon",
-  "name": "Sugarcoat Salon",
-  "url": "https://sugarcoatsalon.in/",
-  "image": "https://sugarcoatsalon.in/assets/salon-interior-1.webp",
-"logo": "https://sugarcoatsalon.in/assets/sc-logo-03.webp",
-
-  "telephone": "+91-8296545458",
-  "priceRange": "₹₹",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "1st Floor, Capital Market, Hennur Main Road, near Kanakashree Housing Society, Kannuru",
-    "addressLocality": "Bengaluru",
-    "addressRegion": "KA",
-    "postalCode": "560077",
-    "addressCountry": "IN"
+  "@type": "OfferCatalog",
+  "@id": "https://sugarcoatsalon.in/services",
+  "name": "Sugarcoat Salon Services & Pricing",
+  "provider": {
+    "@id": "https://sugarcoatsalon.in/#beautysalon"
   },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": 13.0536,
-    "longitude": 77.6517
-  },
-  "openingHoursSpecification": {
-    "@type": "OpeningHoursSpecification",
-    "dayOfWeek": [
-      "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-    ],
-    "opens": "10:00",
-    "closes": "20:00"
-  },
-  "sameAs": [
-    "https://www.instagram.com/sugarcoatsalonbangalore",
-    "https://www.facebook.com/sugarcoatsalonindia"
-  ],
-  "areaServed": {
-    "@type": "Place",
-    "name": "Hennur, Kothanur, Bangalore"
-  },
-    "hasOfferCatalog": {
-    "@type": "OfferCatalog",
-    "name": "Salon Services",
-    "itemListElement": [
-      {
-        "@type": "Service",
-        "name": "Haircut and Hair Styling"
-      },
-      {
-        "@type": "Service",
-        "name": "Hair Botox and Keratin Treatment"
-      },
-      {
-        "@type": "Service",
-        "name": "Hair Colouring"
-      },
-      {
-        "@type": "Service",
-        "name": "Bridal and Party Makeup"
-      },
-      {
-        "@type": "Service",
-        "name": "Nail Art and Nail Extensions"
-      }
-    ]
-  }
+  "itemListElement": [
+    {
+      "@type": "Service",
+      "name": "Haircut & Hair Styling"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Botox & Keratin Treatment"
+    },
+    {
+      "@type": "Service",
+      "name": "Hair Colouring"
+    },
+    {
+      "@type": "Service",
+      "name": "Bridal & Party Makeup"
+    },
+    {
+      "@type": "Service",
+      "name": "Nail Art & Nail Extensions"
+    }
+  ]
 }
 </script>
+
 </head>
 
 <body>
